Fix AUTHOR-10: Making sure entity images stay consistent with backend changes